tests/reference/tokens-paren2-0eef339.stderr
tokenizer error: Parentheses does not match
 --> tests/tokens/errors/paren2.py:6:3
  |
6 | [{]}
  |   ^ 
